--- a/app/src/main/res/layout/sensor_control_1.xml
+++ b/app/src/main/res/layout/sensor_control_1.xml
@@ -32,7 +32,7 @@
 
 
     <TextView
-        android:id="@+id/textView_email"
+        android:id="@+id/textView_sensorId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -54,30 +54,34 @@
         android:textColor="#000000"
         android:textColorHint="#A0A0A0"
         />
+
     <TextView
-        android:id="@+id/tv_error_id"
+        android:id="@+id/tv_error_sensorId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#FF0000"
         android:layout_marginLeft="20dp"
+        android:visibility="gone"
        />
-<!--
-    <Button
-        android:id="@+id/btn_find_id3"
-        android:layout_width="109dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="432dp"
-        android:background="@drawable/button_radius"
-        android:text="인증하기"
-        android:textColor="#FFFFFF"
-        android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.978"
-        app:layout_constraintStart_toStartOf="parent" />
--->
+
+
+    <!--
+        <Button
+            android:id="@+id/btn_find_id3"
+            android:layout_width="109dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="432dp"
+            android:background="@drawable/button_radius"
+            android:text="인증하기"
+            android:textColor="#FFFFFF"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.978"
+            app:layout_constraintStart_toStartOf="parent" />
+    -->
 
     <Button
         android:id="@+id/btn_find_id3"
