--- a/app/src/main/res/layout/register_plant.xml
+++ b/app/src/main/res/layout/register_plant.xml
@@ -3,89 +3,91 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp"
-    tools:layout_editor_absoluteX="-11dp"
-    tools:layout_editor_absoluteY="45dp">
+    android:padding="16dp">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:clickable="true"
+        android:focusable="true"
         android:onClick="selectImage"
         android:src="@drawable/register_image"
-        tools:layout_editor_absoluteX="66dp"
-        tools:layout_editor_absoluteY="66dp" />
-
+        android:contentDescription="@string/registry_image_description"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="UsingOnClickInXml" />
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="식물 이름 *"
-        android:textSize="16dp"
+        android:text="@string/planted_name_tag"
+        android:textSize="16sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="395dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/plant_name"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/white_edittext"
-        android:hint="예)사과나무"
-        android:paddingLeft="10dp"
+        android:hint="@string/plant_name_hint"
+        android:paddingStart="10dp"
         android:textColor="#000000"
         android:textColorHint="#A0A0A0"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.156"
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="RtlSymmetry" />
 
     <TextView
         android:id="@+id/plant_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="심은 날짜 *"
-        android:textSize="16dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:text="@string/planted_date_tag"
+        android:textSize="16sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="544dp" />
+        app:layout_constraintTop_toBottomOf="@+id/plant_name"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/date_picker_btn"
         android:layout_width="76dp"
-        android:layout_height="38dp"
-        android:text="달력"
-        tools:layout_editor_absoluteX="296dp"
-        tools:layout_editor_absoluteY="530dp" />
+        android:layout_height="50dp"
+        android:layout_marginStart="20dp"
+        android:text="@string/calendar"
+        app:layout_constraintTop_toTopOf="@+id/plant_date"
+        app:layout_constraintStart_toEndOf="@+id/plant_date"
+        app:layout_marginStart="8dp" />
 
     <TextView
         android:id="@+id/plant_date_text_view"
-        android:layout_width="373dp"
+        android:layout_width="0dp"
         android:layout_height="49dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/white_edittext"
-        android:hint="YYYY/MM/DD"
+        android:hint="@string/exDate"
         android:textColorHint="#A0A0A0"
-        android:textSize="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@+id/date_picker_btn"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/plant_date" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="373dp"
+        android:layout_width="0dp"
         android:layout_height="49dp"
-        android:layout_margin="16dp"
-        android:layout_marginBottom="16dp"
-        android:background="#808080"
-        android:clickable="false"
-        android:text="완료"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.578"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginTop="16dp"
+        android:background="#505050"
+        android:text="@string/complete"
+        android:textColor="#E0E0E0"
+        app:layout_constraintTop_toBottomOf="@+id/plant_date_text_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
