--- a/app/src/main/res/layout/sensor_register_list.xml
+++ b/app/src/main/res/layout/sensor_register_list.xml
@@ -19,6 +19,16 @@
         android:textSize="20sp" />
 
 
+    <ImageButton
+        android:id="@+id/button_sensor_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="214dp"
+        android:layout_toEndOf="@id/textView_name"
+        android:background="@android:color/transparent"
+        android:onClick="onAddButtonClick"
+        android:src="@drawable/ic_sensor_add" />
 
     <EditText
         android:id="@+id/search_field"
