--- a/app/src/main/res/drawable/rounded_border.xml
+++ b/app/src/main/res/drawable/rounded_border.xml
@@ -1,5 +1,5 @@
  <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#00FFFFFF"/>
-    <stroke android:width="2dp" android:color="#33FF33"/>
+    <stroke android:width="1dp" android:color="#70C36F"/>
     <corners android:radius="50dp"/>
 </shape>
