--- a/app/src/main/res/layout/activity_plants_detail.xml
+++ b/app/src/main/res/layout/activity_plants_detail.xml
@@ -21,6 +21,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- 수정 버튼 -->
+    <Button
+        android:id="@+id/button_edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
+        android:text="수정"
+        app:layout_constraintStart_toEndOf="@id/textView_name"
+        app:layout_constraintTop_toTopOf="@id/textView_name"
+        app:layout_constraintBottom_toBottomOf="@id/textView_name" />
+
+    <!-- 삭제 버튼 -->
+    <Button
+        android:id="@+id/button_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="삭제"
+        app:layout_constraintStart_toEndOf="@id/button_edit"
+        app:layout_constraintTop_toTopOf="@id/textView_name"
+        app:layout_constraintBottom_toBottomOf="@id/textView_name" />
+
     <!-- 풀 이미지 -->
     <ImageView
         android:id="@+id/plantImageView"
@@ -62,7 +83,7 @@
                     android:id="@+id/plantNameTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="10dp"
                     android:text="식물 이름 : ○○○○"
                     android:textSize="18sp"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -82,7 +103,7 @@
                     android:id="@+id/plantNumberTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="18dp"
+                    android:layout_marginTop="10dp"
                     android:text="센서 번호 : xxx-xxx1234"
                     android:textSize="18sp"
                     app:layout_constraintLeft_toLeftOf="parent"
