--- a/app/src/main/res/layout/register_plant.xml
+++ b/app/src/main/res/layout/register_plant.xml
@@ -37,10 +37,19 @@
         android:paddingStart="10dp"
         android:textColor="#000000"
         android:textColorHint="#A0A0A0"
-        app:layout_constraintTop_toBottomOf="@+id/textView7"
+        app:layout_constraintTop_toBottomOf="@+id/duplicateButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="RtlSymmetry" />
+
+    <Button
+        android:id="@+id/duplicateButton"
+        android:layout_width="76dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="20dp"
+        android:text="중복체크"
+        app:layout_constraintTop_toTopOf="@+id/textView7"
+        app:layout_constraintStart_toEndOf="@+id/textView7" />
 
     <TextView
         android:id="@+id/plant_date"
