--- a/app/src/main/res/layout/activity_plants_detail.xml
+++ b/app/src/main/res/layout/activity_plants_detail.xml
@@ -137,7 +137,7 @@
                     android:text="현재 온도 : 27°C"
                     android:textSize="17sp"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/plantNumberTextView" />
+                    app:layout_constraintTop_toBottomOf="@id/plantNameTextView" />
 
                 <TextView
                     android:id="@+id/humidityTextView"
